<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微信</string>
    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="action_groupchat">发起群聊</string>
    <string name="action_feedback">意见反馈</string>
    <string name="action_add_friends">添加朋友</string>
    <string name="action_receive_money">收钱</string>
    <string name="action_scan">扫一扫</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_found">发现</string>
    <string name="tab_me">我</string>
    <string name="tab_chat">微信</string>
    <string name="chat_record_nomal">按住 说话</string>
    <string name="chat_record_recording">松开 结束</string>
    <string name="chat_record_cancel">松开手指 发送语音</string>
    <string name="chat_dialog_cancel">手指上滑 取消发送</string>
    <string name="chat_dialog_too_short">录音时间过短</string>
    <string name="input_send">发送</string>

</resources>