<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_menu_search"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_group_chat"
        android:icon="@drawable/ic_menu_groupchat"
        android:orderInCategory="100"
        android:title="@string/action_groupchat"/>
    <item
        android:id="@+id/action_add_friends"
        android:icon="@drawable/ic_menu_addfriends"
        android:orderInCategory="100"
        android:title="@string/action_add_friends"/>
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ic_menu_scanf"
        android:orderInCategory="100"
        android:title="@string/action_scan"/>
    <item
        android:id="@+id/action_receive_money"
        android:icon="@drawable/ic_menu_receive_money"
        android:orderInCategory="100"
        android:title="@string/action_receive_money"/>
    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/ic_menu_feedback"
        android:orderInCategory="100"
        android:title="@string/action_feedback"/>

</menu>